# doc/api.yaml
@@ -119,6 +119,8 @@ components:
             error: Bad Request
             message:
               - value must be a UUID
+    UnauthorizedError:
+      description: Access token is missing or invalid
     404:
       description: Not Found
       content:
@@ -134,7 +136,88 @@ components:
             statusCode: 422
             message: Not Found
 
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
+security:
+  - bearerAuth: []
+
 paths:
+  /login:
+    post:
+      tags:
+        - Login
+      security: []
+      summary: Login
+      description: Logins a user and returns a JWT-token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                login:
+                  type: string
+                  description: Username
+                password:
+                  type: string
+                  description: Password
+              required:
+                - user
+                - login
+      responses:
+        200:
+          description: Successful login.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                description: JWT Token
+        403:
+          description: Incorrect login or password
+  /signup:
+    post:
+      tags:
+        - Signup
+      security: [ ]
+      summary: Signup
+      description: Signup a user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                login:
+                  type: string
+                  minLength: 3
+                  maxLength: 255
+                  description: Username
+                password:
+                  type: string
+                  format: password
+                  pattern: ^[a-zA-Z0-9]{3,30}
+                  description: Password
+              required:
+                - login
+                - password
+      responses:
+        204:
+          description: Successful signup
+        400:
+          description: Bad request
+        409:
+          description: Conflict. Login already exists
   /user:
     get:
       tags:
@@ -150,6 +233,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Users
@@ -191,6 +276,8 @@ paths:
                   - login should not be empty
                   - password must be a string
                   - password should not be empty
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /user/{id}:
     parameters:
       - name: id
@@ -213,6 +300,8 @@ paths:
                 $ref: '#/components/schemas/User'
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
 
@@ -264,6 +353,8 @@ paths:
                     example: 1655999999999
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         403:
           description: Forbidden
           content:
@@ -284,6 +375,8 @@ paths:
           description: The user has been deleted
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
   /track:
@@ -301,6 +394,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Track'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Track
@@ -345,6 +440,8 @@ paths:
                   - name must be a string
                   - name should not be empty
                   - duration must be a number conforming to the specified constraints
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /track/{id}:
     parameters:
       - name: id
@@ -367,6 +464,8 @@ paths:
                 $ref: '#/components/schemas/Track'
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
     put:
@@ -429,6 +528,8 @@ paths:
                     nullable: true
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
     delete:
@@ -441,6 +542,8 @@ paths:
           description: Deleted successfully
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
   /album:
@@ -458,6 +561,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Album'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Album
@@ -501,6 +606,8 @@ paths:
                   - name should not be empty
                   - year must be a number conforming to the specified constraints
                   - year should not be empty
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /album/{id}:
     parameters:
       - name: id
@@ -523,6 +630,8 @@ paths:
                 $ref: '#/components/schemas/Album'
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
     put:
@@ -558,6 +667,8 @@ paths:
                 $ref: '#/components/schemas/Album'
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
     delete:
@@ -570,6 +681,8 @@ paths:
           description: Deleted successfully
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
   /artist:
@@ -587,6 +700,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Artist'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Artist
@@ -625,6 +740,8 @@ paths:
                   - name should not be empty
                   - grammy must be a boolean value
                   - grammy should not be empty
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /artist/{id}:
     parameters:
       - name: id
@@ -647,6 +764,8 @@ paths:
                 $ref: '#/components/schemas/Artist'
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
     put:
@@ -677,6 +796,8 @@ paths:
                 $ref: '#/components/schemas/Artist'
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
     delete:
@@ -689,6 +810,8 @@ paths:
           description: Deleted successfully
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
   /favs:
@@ -704,6 +827,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Favorites'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /favs/track/{id}:
     parameters:
       - name: id
@@ -722,6 +847,8 @@ paths:
           description: Added successfully
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         422:
           $ref: '#/components/responses/422'
     delete:
@@ -734,6 +861,8 @@ paths:
           description: Deleted successfully
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
   /favs/album/{id}:
@@ -754,6 +883,8 @@ paths:
           description: Added successfully
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         422:
           $ref: '#/components/responses/422'
     delete:
@@ -766,6 +897,8 @@ paths:
           description: Deleted successfully
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
   /favs/artist/{id}:
@@ -786,6 +919,8 @@ paths:
           description: Added successfully
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         422:
           $ref: '#/components/responses/422'
     delete:
@@ -798,5 +933,7 @@ paths:
           description: Deleted successfully
         400:
           $ref: '#/components/responses/400'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           $ref: '#/components/responses/404'
